add some git command

--- a/tool.org
+++ b/tool.org
@@ -1379,13 +1379,14 @@ git可以使用diff命令比较多个空间的文件状态。
 *** git文件添加
 #+CAPTION: GIT文件添加
 #+attr_latex:  :placement [H]
-|------+-------+------+---------------+--------------------------------|
-| WORK | STAGE | HEAD | cmd           | Description                    |
-|------+-------+------+---------------+--------------------------------|
-|------+-------+------+---------------+--------------------------------|
-| from | to    |      | add           | 文件添加                       |
-|      |       |      | add -u [path] | 添加path中所有已跟踪的文件修改 |
-|------+-------+------+---------------+--------------------------------|
+|------+-------+------+---------------+---------------------------------|
+| WORK | STAGE | HEAD | cmd           | Description                     |
+|------+-------+------+---------------+---------------------------------|
+|------+-------+------+---------------+---------------------------------|
+| from | to    |      | add [file]    | 文件添加                        |
+|      |       |      | add -u [path] | 添加path中所有已跟踪的文件修改  |
+|      |       |      | add .         | add all new file in current dir |
+|------+-------+------+---------------+---------------------------------|
 *** git文件提交
 #+CAPTION: GIT文件提交
 #+attr_latex:  :placement [H]
@@ -1432,34 +1433,38 @@ git可以使用diff命令比较多个空间的文件状态。
 git branch -v：查看当前分支，即查看HEAD当前指向(master或其他分支)
 #+CAPTION: GIT分支操作
 #+attr_latex:  :placement [H]
-|------+-------+------+---------------------------+---------------------------------------|
-| WORK | STAGE | HEAD | cmd                       | description                           |
-|------+-------+------+---------------------------+---------------------------------------|
-|------+-------+------+---------------------------+---------------------------------------|
-| to   | to    | from | checkout <name>           | 检出name分支到WORK和STAGE             |
-|      |       |      |                           | HEAD指向brch分                        |
-|------+-------+------+---------------------------+---------------------------------------|
-| to   | to    | diff | checkout HEAD             | 汇总WORK和STAGE与当前分支的差异       |
-| to   | to    |      | checkout <name> -- <file> | name分支的file覆盖当前分的WORK和STAGE |
-|------+-------+------+---------------------------+---------------------------------------|
-|      |       |      | branch                    | 显示本地分支, *表示当前分支           |
-|      |       |      | branch -v                 | 显示更详细的本地分支                  |
-|------+-------+------+---------------------------+---------------------------------------|
-|      |       | *    | branch <name>             | 基于head创建名为name的分支            |
-|      |       |      | branch <name> <id>        | 基于commit id创建名为name的分支       |
-|      |       |      | checkout --orphan <name>  | 创建空白分支                          |
-|------+-------+------+---------------------------+---------------------------------------|
-|      |       |      | branch -d <name>          | 删除已合并的name分支                  |
-|      |       |      | branch -D <name>          | 强制删除name分支                      |
-|------+-------+------+---------------------------+---------------------------------------|
-|      |       |      | branch -m <oldn> <newn>   | 重命名分支oldn为newn                  |
-|      |       |      | branch -M <oldn> <newn>   | 强制重命名分支oldn为newn              |
-|------+-------+------+---------------------------+---------------------------------------|
-|      |       |      | push origin <name>        | 将name分支推送到远程共享              |
-|      |       |      | push origin  :<name>      | 将远程的name分支删除                  |
-|      |       |      | branch -a                 | 查询所有分支（包括远分支）            |
-|      |       |      | branch -r                 | 查询所有远程分支                      |
-|------+-------+------+---------------------------+---------------------------------------|
+|------+-------+------+-----------------------------+---------------------------------------|
+| WORK | STAGE | HEAD | cmd                         | description                           |
+|------+-------+------+-----------------------------+---------------------------------------|
+|------+-------+------+-----------------------------+---------------------------------------|
+| to   | to    | from | checkout <name>             | 检出name分支到WORK和STAGE             |
+|      |       |      |                             | HEAD指向brch分                        |
+|------+-------+------+-----------------------------+---------------------------------------|
+| to   | to    | diff | checkout HEAD               | 汇总WORK和STAGE与当前分支的差异       |
+| to   | to    |      | checkout <name> -- <file>   | name分支的file覆盖当前分的WORK和STAGE |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       |      | branch                      | 显示本地分支, *表示当前分支           |
+|      |       |      | branch -v                   | 显示更详细的本地分支                  |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       | *    | branch <name>               | 基于head创建名为name的分支            |
+|      |       |      | branch <name> <id>          | 基于commit id创建名为name的分支       |
+|      |       |      | checkout --orphan <name>    | 创建空白分支                          |
+|      |       |      | checkout -b <name>          | 创建并切换分支                        |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       |      | branch -d <name>            | 删除已合并的name分支                  |
+|      |       |      | branch -D <name>            | 强制删除name分支                      |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       |      | branch -m <oldn> <newn>     | 重命名分支oldn为newn                  |
+|      |       |      | branch -M <oldn> <newn>     | 强制重命名分支oldn为newn              |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       |      | push origin <name>          | 将name分支推送到远程共享              |
+|      |       |      | pull origin <name>          | 拉取远程name分支到本地                |
+|------+-------+------+-----------------------------+---------------------------------------|
+|      |       |      | push origin  :<name>        | 将远程的name分支删除                  |
+|      |       |      | push origin --delete <name> | （同上）将远程的name分支删除          |
+|      |       |      | branch -a                   | 查询所有分支（包括远分支）            |
+|      |       |      | branch -r                   | 查询所有远程分支                      |
+|------+-------+------+-----------------------------+---------------------------------------|
 **** 创建空白分支
 一般在旧分支上是不能创建空白分支，可以使用--orphan参数创建空白分支.空
 白分支也是以父分支为基础，但是空白分支上没有父分支的log，也可以不包含
