add some software test theory

--- a/software.org
+++ b/software.org
@@ -6,6 +6,87 @@
 #+options: h:4 
 #+startup: overview
 
+* 软件测试
+软件测试根据看问题角度不同，有多种分类。
+** 根据项目流程阶段划分
+几种测试和设计的对应关系见表[[tbldsgtest]]所示。
+#+CAPTION: 设计和测试对应关系
+#+NAME: tbldsgtest
+#+attr_latex: :placement [H]
+|----------+----------|
+| 设计阶段 | 测试阶段 |
+|----------+----------|
+|----------+----------|
+| 市场调研 | 验收测试 |
+|----------+----------|
+| 需求分析 | 系统测试 |
+| 架构设计 | 集成测试 |
+| 模块设计 | 单元测试 |
+|----------+----------|
+
+*** 单元测试
+单元测试，也叫模块测试，是对程序中的单个子程序或具有独立功能的代码段进
+行测试的过程。
+*** 集成测试
+集成测试是在单元测试基础上，先通过单元模块组装成系统或子系统，再进行测
+试。重点是检查模块间的接口是否正确。
+*** 系统测试
+系统测试是针对整个产品系统进行的测试，验证系统是否满足需求规格的定义，
+以及软件系统的正确性和性能等，是否满足其需求规格的要求。
+*** 验收测试
+验收测试是部署软件之前的最后一个测试阶段。目的是确保软件准备就绪，向客
+户展示该软件系统能够满足用户的需求。
+** 根据模块细节可见程度划分
+*** 白盒测试
+白盒测试，按照程序内部的结构测试程序，通过测试来检测产品内部动作是否按
+照设计规格说明书的规定正常进行，检验程序中的每条逻辑路径是否都能按照预
+定要求正确工作。
+*** 黑盒测试
+黑盒测试不关心内部结构和流程。只关心软件的输入和输出关系。
+*** 灰盒测试
+灰盒测试，既关注输入输出关系，也关注内部表现。但没有白盒测试关注的那么
+详细完整。
+** 根据不同测试面划分
+*** 逻辑功能测试
+*** 界面测试
+*** 易用性测试
+*** 安装测试
+*** 兼容性测试
+*** 安全测试
+*** 时间性能测试
+注意考核软件的一个具体的响应时间
+*** 空间性能测试
+主要指软件运行时消耗的系统资源，如CPU、内存、网络带宽等。
+** 根据测试手段划分
+*** 手工测试
+*** 自动化测试
+自动化测试需要有几大原则。
+- 任务测试明确，不会频繁变动；
+- 每日构建后的测试验证；
+- 比较频繁的回归测试；
+- 软件系统界面稳定，变动少；
+- 需要在多个平台上运行的相同测试案例，组合遍历型测试，大量的重复任务；
+- 软件维护周期长；
+- 项目进度压力不太大；
+- 被测软件系统开发较为规范，能够保证系统的可测性；
+- 具备大量的自动化测试平台；
+- 测试人员具备较强的编程能力；
+** 其他划分
+*** 冒烟测试
+是指在对一个新版本进行大规模的系统测试前，先验证一下软件的基本功能是否
+实，是否具备可测性。测试小组在正式测试一个新版本前，先投入较少的人力和
+时验证一个软件的主要功能，如果主要功能都没有运行通过，也没必要进行深入
+测试。
+*** 回归测试
+是指确认问题是否得到修复，是否引入了新的问题。
+*** 随机测试
+指测试中的输入数据都是随机生成，模拟用户的真实操作，发现一些边缘性的错
+误。
+*** 探索性测试
+探索性测试可以说是一种测试思维技术，它没有很多实际的测试方法，技术和工
+具。探索性测试强调测试人员的主观能动性，抛弃繁杂的测试计划和测试用例设
+计过程，强调在碰到问题时及时改变测试策略。
+
 * 编程语言
 ** C语言
 *** 宏操作
