add Intel HEX format description

--- a/software.org
+++ b/software.org
@@ -673,3 +673,54 @@
       }
   }
 #+END_SRC
+* 机器码
+** BIN
+BIN格式实际上就是机器码顺序排列的镜像文件，没有文件格式信息。
+** HEX
+HEX格式常用Intel定义格式。两个字符表示一个字节的字面含义。
+|---+----+------+----+-----------+----|
+| : | LL | AAAA | TT | DDDDDD... | CC |
+|   |    |      |    |           |    |
+|---+----+------+----+-----------+----|
+
+表示为“:[1字节长度][2字节地址][1字节记录类型][n字节数据段][1字节校验和]” 
+
+- 起始：都是已冒号(0x3A)开始;
+- LL: 本条记录的数据字段长度，2个字符（1个字节）；
+- AAAA：本条记录的数据字段的地址，地址从0x0000~0xFFFF（64K空间）;
+- TT：本条记录的类型
+  + 00：普通数据记录；
+  + 01：文件结束记录，HEX最后一条记录，固定为“:00000001FF”；
+  + 02：扩展段地址记录；扩展段地址记录也叫HEX86记录,它包括4-19位数据地
+    址段. 扩展段地址记总是有两个数据字节,外观如下::020000021200EA其中:02
+    是记录当中数据字节的数量；0000是地址域.对于扩展段地址记录,这个域总
+    是0000；02是记录类型02( 扩展段地址记录)；1200是地址段；EA是这个记
+    录的校验和；当一个扩展段地址记录被读取,存储于数据域的扩展段地址被
+    保存,它被应用于从Intel HEX文件读取来的随后的记录. 段地址保持有效,
+    直到它被另外一个扩展地址记录所改变。 通过把记录当中的地址域与被移
+    位的来自扩展段地址记录的地址数据相加(像加法一样的加，而不是偏移)获
+    得数据记录的绝对存储器地址。 如，来自数据记录地址域的地址0x2462，
+    扩展段地址记录数据域0x1200，绝对存储器地址0x2462+0x1200=0x00014462.
+  + 03：开始段地址记录；
+  + 04：扩展线性地址记录；当一 个扩展线性地址记录被读取,存储于数据域的
+    扩展线性地址被保存，它被应于从Intel HEX文件读取来的随后的记录.线性
+    地址保持有效, 到它被另外一个扩址记录所改变。通过把记录当中的地址域
+    与被移位的来自扩展线性地址记录的地址数据相加获得数据记录的绝对存储
+    器地址。以下的例子演示了这个过程:
+    :0200000480007A    //数据记录的绝对存储器地址高16位为0x8000
+    :100000001D000A00000000000000000000000000C9
+    :100010000000000085F170706F0104005D00BD00FC
+    第一行，是Extended Linear Address Record，里面的数据，也就是基地址
+    是0x8000，第二行是DataRecord，里面的地址值是0x0000。那么数据
+    1D000A00000000000000000000000000（共16个字节）要写入FLASH中的地址
+    为 (0x8000<< 16)| 0x0000，也就是写入FLASH的0x80000000这个地址；第
+    三行的数据写入地址为0x80000010.当一个HEX文件的数据超过64k的时候，
+    文件中就会出现多个Extended Linear Address Record。 
+  + 05：开始线性地址记录；其实就是入口地址，如keil map：Memory Map of
+    the image，Image Entry point : 0x08020189。则会有一条HEX记录为，
+    :040000050802018963
+- DDDD：是数据域,它代表一个字节的数据.一个记录可以有许多数据字节.记录
+  当中数据字节的数量必须和数据长度域(LL)中指定的数字相符. 
+- CC：是校验和域,它表示这个记录的校验和.校验和的计算是通过将记录当中所
+  有十六进制编码数字对的值相加,以256为模进行以下补足.
+
